bdr.BDR.scala.error
Compilation error:
BDR:2: error: type mismatch;
 found   : String("test")
 required: Char
var x:Char="test"
           ^BDR:5: error: not found: value getIndication
  x=getIndication();
    ^